--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ repositories {
 
 dependencies {
     compile 'com.fazecast:jSerialComm:1.3.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
